Implement GhostLink using Java FFM API