@@ -1,12 +1,91 @@
 # GhostLink
-GhostLink is a high-performance messaging library designed for Java applications that require sub-microsecond latency. By leveraging **Memory-Mapped Files (mmap)** and **Off-Heap memory**, it allows two separate JVM processes to communicate via shared memory, bypassing the networking stack and the Java Garbage Collector.
+GhostLink is an ultra high-performance, ultra low-latency messaging library designed for Java applications requiring sub-microsecond IPC (Inter-Process Communication). By leveraging **Memory-Mapped Files** through the modern Java **Foreign Function & Memory (FFM) API** and **Off-Heap memory**, it allows two separate JVM processes to communicate via shared memory, bypassing standard networking stacks and the Java Garbage Collector entirely.
 
-###Technical Objectives (The "Why")
+GhostLink is optimized down to the hardware cache-line level and regularly achieves minimum latencies under 100 nanoseconds, pushing close to the theoretical limits of hardware L3 cache synchronization.
 
-- **Zero-Copy:** Data is written once into shared memory and read directly by the consumer. No intermediate buffers or serialization.
+## 🚀 Key Technical Objectives
 
-- **GC-Free:** No objects are allocated during the message-passing loop, ensuring zero Garbage Collection overhead.
+- **Zero-Copy Serialization:** Data is written once into an off-heap `MemorySegment` and read directly by the consumer. No intermediate `byte[]` buffers or Java Object serialization headers are created.
+- **100% GC-Free:** Everything is handled natively via `java.lang.foreign.MemorySegment`. No objects are allocated during the message-passing loop, guaranteeing absolute zero Garbage Collection pauses during runtime.
+- **Lock-Free SPSC RingBuffer:** Coordination between the Producer and Consumer uses absolute low-level atomic memory barriers via `VarHandle.getAcquire()` and `VarHandle.setRelease()`. No slow OS-level mutexes or `synchronized` blocks.
+- **False Sharing Prevention:** Crucial variables (head and tail sequence indices) are appropriately padded with 128 bytes to isolate them in separate CPU cache lines, completely eliminating cache-line bouncing (false sharing).
+- **Inter-Process Operability:** Enables communication between highly decoupled Java instances (e.g. trading algorithms and market data feeds) running on the same machine almost as if they were threads in the same process.
 
-- **Lock-Free:** Coordination between processes uses Atomic CAS (Compare-And-Swap) operations instead of OS-level mutexes or `synchronized` blocks.
+---
 
-- **Inter-Process:** Enables communication between completely different Java instances on the same machine.
+## 🏎️ Latency Characteristics
+*GhostLink targets performance that matches native C++ shared memory buffers.*
+
+Depending on your CPU architecture (NUMA nodes, L3 Cache speed, memory speed), IPC latency sits far below standard sockets:
+- **Sockets / TCP (localhost):** ~10,000 to 25,000+ nanoseconds
+- **GhostLink Shared Memory:** **~100 nanoseconds** per message (minimum). 
+
+*Note: Achieving theoretical sub-5 ns latency is physically constrained by the underlying hardware (L1/L2 cache cross-core synchronization limits).*
+
+---
+
+## 🛠️ Requirements & Setup
+
+GhostLink extensively uses the memory efficiency of the **Java 24** FFM API.
+
+**1. Java Version**
+Requires JDK 22+ (configured for JDK 24 in the POM). 
+
+**2. JVM Arguments**
+Because it interacts with native memory directly, you **must** supply the following JVM arguments when executing both your Producer and Consumer to grant Native FFM permissions:
+
+```bash
+--enable-native-access=ALL-UNNAMED
+```
+
+---
+
+## 💻 Usage Example
+
+Here is a quick example of transferring 5 million messages lock-free between a Producer and a Consumer using GhostLink. Note that `DATA_FILE` must be a path accessible by both JVMs (e.g., `/dev/shm/ghost_ipc.data` on Linux, or `target/ghost_ipc.data` on Windows).
+
+### The Producer
+
+```java
+import io.ghostlink.GhostProducer;
+
+public class MyProducer {
+    public static void main(String[] args) throws Exception {
+         // Create producer (1M slots, 8 bytes per message)
+         // The boolean 'true' formatizes/initializes the shared memory file
+         try (GhostProducer producer = new GhostProducer("target/ghost.data", 1048576, 8, true)) {
+             long valueToSend = System.nanoTime();
+             
+             // Publishes an 8-byte long into shared memory. Blocks/spins until space is available.
+             producer.publish(valueToSend); 
+         }
+    }
+}
+```
+
+### The Consumer
+
+```java
+import io.ghostlink.GhostConsumer;
+
+public class MyConsumer {
+    public static void main(String[] args) throws Exception {
+         // Connect to the same structured memory file
+         try (GhostConsumer consumer = new GhostConsumer("target/ghost.data", 1048576, 8)) {
+             
+             // Poll locks/spins using Thread.onSpinWait() for maximum CPU reactivity
+             long receivedValue = consumer.poll();
+             
+             System.out.println("Received: " + receivedValue);
+         }
+    }
+}
+```
+
+## Running the Benchmark
+We provide an inline threading benchmark mimicking the exact layout and performance rules of IPC natively.
+
+```bash
+mvn clean compile
+java --enable-native-access=ALL-UNNAMED -cp target/classes io.ghostlink.App
+```
